log

Tue 12 Mar 2024 01:49:44 PM UTC: 
 tests:  0|7
total_score: 0/70
1489c92
Tue 12 Mar 2024 01:57:54 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b8083a4
Tue 12 Mar 2024 01:59:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
29caaa3
Tue 12 Mar 2024 02:07:04 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
37c4fcf
Tue 12 Mar 2024 02:07:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:39:14: error: expected expression before ‘;’ token
   39 |       inicio+;
      |              ^
Compilation failed
a5cce50
Tue 12 Mar 2024 02:07:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:39:7: error: statement with no effect [-Werror=unused-value]
   39 |       inicio;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
eff2c48
Tue 12 Mar 2024 02:08:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3171d45
Thu 14 Mar 2024 07:26:09 PM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:6: error: ‘newsize’ undeclared (first use in this function); did you mean ‘newSize’?
   53 |     *newsize = 0;
      |      ^~~~~~~
      |      newSize
exercises.c:53:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bce6450
Thu 14 Mar 2024 07:26:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
6980221
Thu 14 Mar 2024 07:41:09 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:10: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   81 |       if(arr[i] < arr2[j])
      |          ^~~
      |          arr2
exercises.c:81:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
46899b8
Thu 14 Mar 2024 07:41:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
13d018c
Thu 14 Mar 2024 07:49:53 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
64ea9a4
Thu 14 Mar 2024 07:51:07 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 30/70
396b48a
Thu 14 Mar 2024 07:52:24 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|2
total_score: 50/70
2335b9e
Thu 14 Mar 2024 08:25:25 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
16601ac
Fri 15 Mar 2024 12:50:24 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:174:16: error: ‘m’ undeclared (first use in this function)
  174 |   Nodo *head = m
      |                ^
exercises.c:174:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:176:3: error: expected ‘,’ or ‘;’ before ‘return’
  176 |   return NULL; }
      |   ^~~~~~
exercises.c:174:9: error: unused variable ‘head’ [-Werror=unused-variable]
  174 |   Nodo *head = m
      |         ^~~~
exercises.c:176:16: error: control reaches end of non-void function [-Werror=return-type]
  176 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
5fbc11a
Fri 15 Mar 2024 12:50:31 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|3
total_score: 40/70
c03fc9e
Fri 15 Mar 2024 12:51:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
3991378
Fri 15 Mar 2024 12:53:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
caebb82
Fri 15 Mar 2024 12:54:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
a997b53
Fri 15 Mar 2024 12:55:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
c54adfa
Fri 15 Mar 2024 09:28:03 PM UTC: 
 exercises.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:181:30: error: statement with no effect [-Werror=unused-value]
  181 |   for(int i = 1 ; i < size ; i)
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
358419c
Fri 15 Mar 2024 09:28:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
73baded
Fri 15 Mar 2024 09:34:06 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:155:23: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  155 |   temp_libro->autor = (Autor *) malloc(sizeof(Autor));
      |                       ^
exercises.c:156:24: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  156 |   if(temp_libro->autor == NULL) exit(EXIT_FAILURE);
      |      ~~~~~~~~~~~~~~~~~ ^~
      |                |
      |                Autor
exercises.c:159:27: error: invalid type argument of ‘->’ (have ‘Autor’)
  159 |   strcpy(temp_libro->autor->nombre, nombreAutor);
      |                           ^~
exercises.c:160:20: error: invalid type argument of ‘->’ (have ‘Autor’)
  160 |   temp_libro->autor->anioNacimiento = anioNacimiento;
      |                    ^~
exercises.c:161:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  161 |   return temp_libro;
      |          ^~~~~~~~~~
exercises.c:150:6: note: declared here
  150 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |      ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c069fb8
Fri 15 Mar 2024 09:34:46 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:155:23: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  155 |   temp_libro->autor = (Autor *) malloc(sizeof(Autor));
      |                       ^
exercises.c:156:24: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  156 |   if(temp_libro->autor == NULL) exit(EXIT_FAILURE);
      |      ~~~~~~~~~~~~~~~~~ ^~
      |                |
      |                Autor
exercises.c:159:27: error: invalid type argument of ‘->’ (have ‘Autor’)
  159 |   strcpy(temp_libro->autor->nombre, nombreAutor);
      |                           ^~
exercises.c:160:20: error: invalid type argument of ‘->’ (have ‘Autor’)
  160 |   temp_libro->autor->anioNacimiento = anioNacimiento;
      |                    ^~
Compilation failed
1f3c1d1
Fri 15 Mar 2024 09:35:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:153:22: error: invalid initializer
  153 |   Libro temp_libro = (Libro*) malloc(sizeof(Libro));
      |                      ^
exercises.c:154:17: error: invalid operands to binary == (have ‘Libro’ and ‘void *’)
  154 |   if(temp_libro == NULL) exit(EXIT_FAILURE);
      |                 ^~
exercises.c:155:13: error: invalid type argument of ‘->’ (have ‘Libro’)
  155 |   temp_libro->autor = (Autor *) malloc(sizeof(Autor));
      |             ^~
exercises.c:156:16: error: invalid type argument of ‘->’ (have ‘Libro’)
  156 |   if(temp_libro->autor == NULL) exit(EXIT_FAILURE);
      |                ^~
exercises.c:157:20: error: invalid type argument of ‘->’ (have ‘Libro’)
  157 |   strcpy(temp_libro->titulo, titulo);
      |                    ^~
exercises.c:158:13: error: invalid type argument of ‘->’ (have ‘Libro’)
  158 |   temp_libro->anioPublicacion = anioPublicacion;
      |             ^~
exercises.c:159:20: error: invalid type argument of ‘->’ (have ‘Libro’)
  159 |   strcpy(temp_libro->autor->nombre, nombreAutor);
      |                    ^~
exercises.c:160:13: error: invalid type argument of ‘->’ (have ‘Libro’)
  160 |   temp_libro->autor->anioNacimiento = anioNacimiento;
      |             ^~
Compilation failed
22684d3
Fri 15 Mar 2024 09:35:39 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:155:23: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  155 |   temp_libro->autor = (Autor *) malloc(sizeof(Autor));
      |                       ^
exercises.c:156:24: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  156 |   if(temp_libro->autor == NULL) exit(EXIT_FAILURE);
      |      ~~~~~~~~~~~~~~~~~ ^~
      |                |
      |                Autor
Compilation failed
52def94
Fri 15 Mar 2024 09:41:00 PM UTC: 
 exercises.c | 13 +++++--------
 1 file changed, 5 insertions(+), 8 deletions(-)
 tests:  0|1
total_score: 60/70
2c3aee4
